# aesthetic_ascii

./: MANIFEST.in  README.md  setup.cfg
aesthetic_ascii/: synthesize.py
assets/images/: SOURCES.md
labs/: example.ipynb  pull_images.ipynb  test.txt  test_script.ipynb
labs/.ipynb_checkpoints/: test_script-checkpoint.ipynb
src/aesthetic_ascii/miami/: synthesize.py
