[metadata]
name = aesthetic_ascii
version = 0.0.1
author = James Briggs
author_email = jamescalam94@gmail.com
description = For generating A E S T H E T I C ascii art
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
